fix: icon align

--- a/packages/theme-chalk/src/input.scss
+++ b/packages/theme-chalk/src/input.scss
@@ -206,7 +206,7 @@
     height: inherit;
     text-align: center;
     transition: all var(--el-transition-duration);
-    vertical-align: text-bottom;
+    vertical-align: middle;
 
     &:after {
       content: '';
